--- a/doc/icewm.adoc
+++ b/doc/icewm.adoc
@@ -282,7 +282,9 @@ Default values are shown following the equal sign.
 
 The following settings can be set to value 1 (enabled) or value 0 (disabled).
 
-ClickToFocus = 1:: Enables click to focus mode.  RaiseOnFocus = 1:: Window is raised when focused.  FocusOnClickClient = 1:: Window is focused when client area is clicked.
+ClickToFocus = 1:: Enables click to focus mode.
+RaiseOnFocus = 1:: Window is raised when focused.
+FocusOnClickClient = 1:: Window is focused when client area is clicked.
 RaiseOnClickClient = 1:: Window is raised when client area is clicked.
 RaiseOnClickTitleBar = 1:: Window is raised when titlebar is clicked.
 RaiseOnClickButton = 1:: Window is raised when title bar button is clicked.
