document desktop background

--- a/doc/icewm.adoc
+++ b/doc/icewm.adoc
@@ -598,12 +598,16 @@ ColorActiveBorder:: Color of the active window border.
 
 === Desktop Background
 
-DesktopBackgroundColor:: Color of the desktop background.
-DesktopBackgroundImage:: Image (.xpm) for desktop background. If you want icewm
+DesktopBackgroundMultihead = 0:: Paint the background image over all multihead monitors combined.
+DesktopBackgroundCenter = 0:: Display desktop background centered and not tiled. (set to 0 or 1).
+SupportSemitransparency = 1:: Support for semitransparent terminals like Eterm or gnome-terminal.
+DesktopBackgroundScaled = 0:: Resize desktop background to full screen.
+DesktopBackgroundImage = "":: Image (.xpm) for desktop background. If you want icewm
 to ignore the desktop background image / color set both DesktopBackgroundColor ad
 DesktopBackgroundImage to an empty value ("").
-DesktopBackgroundCenter = 0:: Display desktop background centered and
-not tiled. (set to 0 or 1).
+DesktopBackgroundColor = "":: Color of the desktop background.
+DesktopTransparancyImage = "":: Image(s) to announce for semitransparent windows.
+DesktopTransparancyColor = "":: Color(s) to announce for semitransparent windows.
 
 === Task Bar
 
