--- a/man/icewm-preferences.pod
+++ b/man/icewm-preferences.pod
@@ -902,8 +902,47 @@ Command to run for address bar entries.
 
 =head3 Colors
 
-=head3 Task Bar
+=head3 Desktop Background
 
+The following preferences are read by L<icewmbg(1)>:
+
+=over
+
+=item B<DesktopBackgroundMultihead>=0  0/1
+
+Paint the background image over all multihead monitors combined.
+
+=item B<DesktopBackgroundCenter>=0  0/1
+
+Display desktop background centered and not tiled.
+
+=item B<SupportSemitransparency>=1  0/1
+
+Support for semitransparent terminals like Eterm or gnome-terminal.
+
+=item B<DesktopBackgroundScaled>=0  0/1
+
+Resize desktop background to full screen.
+
+=item B<DesktopBackgroundImage>=""
+
+Desktop background color(s).
+
+=item B<DesktopBackgroundColor>=""
+
+Desktop background image(s).
+
+=item B<DesktopTransparancyImage>=""
+
+Image(s) to announce for semitransparent windows.
+
+=item B<DesktopTransparancyColor>=""
+
+Color(s) to announce for semitransparent windows.
+
+=back
+
+=head3 Task Bar
 
 =head1 EXAMPLES
 
